test/test_units/test_kclvm/test_types/invalid_test_data/subscript/subscript_0.k
dataList = [1, 2, 3]
dataList0: int = dataList["1"]
